# rl-traffic-control

./: .gitignore  README.md  main.py  pyproject.toml
maps/maps1/: baseline_tripinfo.xml  cross.add.xml  cross.con.xml  cross.nod.xml  small_map.net copy.xml
maps/maps2/: actuated_tripinfo.xml  baseline_tripinfo.xml  cross.net.xml  random_tripinfo.xml
maps/maps3/env_iiser/: routes_new.rou.alt.xml  trips.trips.xml
rl-agents/SARSA/: actuated_tripinfo.xml  benchmark.ipynb  cross.edg.xml  cross.out  cross.rou.xml  cross.sumocfg  main.ipynb  map_actuated.net.xml  sarsa_qtable.pkl  small_routes.rou.xml  tensorboard.ipynb  train.py  tripinfo1.xml  tripinfo_eval.xml
rl-agents/SARSA/sarsa_tensorboard/: events.out.tfevents.1775726440.LAPTOP-AK2DPKAO.16336.0  events.out.tfevents.1775768665.arch.48415.0  events.out.tfevents.1775769953.arch.49954.0  events.out.tfevents.1775770164.arch.49954.1  events.out.tfevents.1775770274.arch.49954.2  events.out.tfevents.1775770303.arch.49954.3
rl-agents/dqn/: 3x3-idqn.ipynb  3x3-v1.ipynb  3x3-v2.ipynb  3x3-v3.ipynb  benchmark-3x3.ipynb  benchmark.ipynb  iiser-v2.ipynb  iiser-v3.ipynb  iiser.ipynb
rl-agents/dqn/env/: routes.rou.xml
rl-agents/dqn/env_iiser/: routes.rou.alt.xml  routes.rou.xml  routes_new.rou.xml  simulation.sumocfg  trips_new.trips.xml
rl-agents/dqn/models/: 3x3-v2.pth  3x3-v3.pth  3x3.pth
rl-agents/dqn/results/: actuated_tripinfo.xml  rl_tripinfo.xml  (+2 more)
rl-agents/ql/: actuated_tripinfo.xml  baseline_tripinfo.xml  benchmark.ipynb  ql.ipynb  qlearning_qtable.pkl  random_tripinfo.xml  tensorboard.ipynb  tripinfo_eval.xml
(+104 files in other folders)
